--- a/app/src/main/res/layout/activity_review_merchant_agreement.xml
+++ b/app/src/main/res/layout/activity_review_merchant_agreement.xml
@@ -102,6 +102,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:scrollbars="none"
             android:paddingHorizontal="@dimen/_21sdp">
 
             <TextView
@@ -109,7 +110,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_regular"
-                android:text="@string/application_desclosure_description"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12ssp" />
         </ScrollView>
