--- a/app/src/main/res/color/new_chip_background_color.xml
+++ b/app/src/main/res/color/new_chip_background_color.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/primary_green"
         android:state_checked="true" />
-    <item android:color="@color/bg_view_color" />
+    <item android:color="@color/et_bg_gray" />
 </selector>
