--- a/app/src/main/res/layout/recent_txns_list.xml
+++ b/app/src/main/res/layout/recent_txns_list.xml
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_1sdp"
-                android:fontFamily="@font/opensans_regular"
+                android:fontFamily="@font/opensans_semibold"
                 android:text="06/23/2021 2:20am"
                 android:textColor="@color/dark_gray"
                 android:textSize="@dimen/_9ssp" />
