--- a/app/src/main/res/layout/transaction_filter_dialog.xml
+++ b/app/src/main/res/layout/transaction_filter_dialog.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/filterLL"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/filter_top_corners"
@@ -17,11 +18,13 @@
             android:layout_height="@dimen/_2sdp"
             android:layout_gravity="center"
             android:layout_marginBottom="@dimen/_28sdp"
+            android:background="@color/primary_green"
             android:gravity="center" />
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -295,7 +298,6 @@
                         android:id="@+id/dateRangePickerLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/_50sdp"
                         android:background="@drawable/bg_small_corners"
                         android:gravity="center"
                         android:orientation="horizontal">
@@ -323,7 +325,6 @@
                             android:layout_marginStart="@dimen/_10sdp"
                             android:layout_marginEnd="@dimen/_10sdp"
                             android:src="@drawable/ic_calendar_icon"
-
                             />
                     </LinearLayout>
                 </LinearLayout>
@@ -333,6 +334,7 @@
                 android:id="@+id/applyFilterBtnCV"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_42sdp"
+                android:layout_marginTop="@dimen/_40sdp"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="@dimen/_35sdp"
                 android:gravity="center"
@@ -352,7 +354,7 @@
             </androidx.cardview.widget.CardView>
 
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 </layout>
