--- a/app/src/main/res/layout/merchant_qr.xml
+++ b/app/src/main/res/layout/merchant_qr.xml
@@ -15,13 +15,13 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/_11sdp"
-            android:layout_marginHorizontal="@dimen/_11sdp">
+            android:layout_marginHorizontal="@dimen/_11sdp"
+            android:layout_marginTop="@dimen/_11sdp">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/saleCardV"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="@dimen/_10sdp"
                 app:cardCornerRadius="@dimen/_10sdp">
 
@@ -30,52 +30,97 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_21sdp"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:gravity="center"
-                        android:text="Sale Amount"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/_12ssp" />
-
                     <LinearLayout
+                        android:id="@+id/qrLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_11sdp"
-                        android:layout_marginBottom="@dimen/_11sdp"
-                        android:gravity="center"
-                        android:orientation="horizontal">
+                        android:orientation="vertical"
+                        android:visibility="gone">
 
                         <TextView
-                            android:id="@+id/amountTV"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/saleTextTV"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_bold"
-                            android:text="160.00"
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_33ssp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/_5sdp"
-                            android:layout_marginTop="@dimen/_7sdp"
-                            android:fontFamily="@font/opensans_bold"
-                            android:text="CYN"
-                            android:textColor="@color/primary_black"
+                            android:layout_marginTop="@dimen/_21sdp"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:gravity="center"
+                            android:text="Sale Amount"
+                            android:textColor="@color/black"
                             android:textSize="@dimen/_12ssp" />
+
+                        <LinearLayout
+                            android:id="@+id/amountLL"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_11sdp"
+                            android:layout_marginBottom="@dimen/_11sdp"
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/amountTV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_bold"
+                                android:text="160.00"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_33ssp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/_5sdp"
+                                android:layout_marginTop="@dimen/_7sdp"
+                                android:fontFamily="@font/opensans_bold"
+                                android:text="CYN"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_12ssp" />
+                        </LinearLayout>
+
+                        <ImageView
+                            android:id="@+id/qr_outlineIV"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="@dimen/_31sdp"
+                            android:src="@drawable/qr_image_outline" />
                     </LinearLayout>
 
-                    <ImageView
-                        android:id="@+id/qr_outlineIV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="@dimen/_31sdp"
-                        android:src="@drawable/qr_image_outline" />
+                    <RelativeLayout
+                        android:id="@+id/animationRL"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center_horizontal"
+                        android:padding="@dimen/_60sdp"
+                        android:visibility="visible">
+
+                        <com.airbnb.lottie.LottieAnimationView
+                            android:id="@+id/lottieAnimV"
+                            android:layout_width="@dimen/_90sdp"
+                            android:layout_height="@dimen/_90sdp"
+                            android:layout_marginStart="@dimen/_30sdp"
+                            android:layout_marginBottom="@dimen/_40sdp"
+                            app:lottie_autoPlay="true"
+                            app:lottie_loop="true"
+                            app:lottie_rawRes="@raw/stepper_loader" />
+
+                        <TextView
+                            android:id="@+id/waitingText"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/lottieAnimV"
+                            android:layout_marginBottom="@dimen/_50sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:gravity="clip_horizontal"
+                            android:text="Waiting on customer..."
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_12ssp"
+                            android:visibility="invisible" />
+                    </RelativeLayout>
+
+
                 </LinearLayout>
+
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
@@ -84,8 +129,8 @@
                 android:layout_height="@dimen/_44sdp"
                 android:layout_below="@+id/saleCardV"
                 android:layout_marginHorizontal="@dimen/_11sdp"
-                android:layout_marginBottom="@dimen/_21sdp"
                 android:layout_marginTop="@dimen/_50sdp"
+                android:layout_marginBottom="@dimen/_21sdp"
                 android:background="@drawable/bg_greencolor_filled"
                 android:gravity="center"
                 android:orientation="horizontal">
