--- a/app/src/main/res/layout/fragment_genarate_qr.xml
+++ b/app/src/main/res/layout/fragment_genarate_qr.xml
@@ -31,7 +31,7 @@
                 android:maxLength="@string/maxlength"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textCursorDrawable="@drawable/cursor_color"
+                android:textCursorDrawable="@drawable/cursor_color_white"
                 android:textSize="@dimen/_53ssp" />
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/closeLL"
@@ -60,9 +60,10 @@
 
                     <ImageView
                         android:id="@+id/imgProfileSmall"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/_6sdp"
+                        android:layout_height="@dimen/_6sdp"
                         android:scaleType="fitXY"
+                        android:layout_gravity="center"
                         android:src="@drawable/ic_white_close"
                         android:visibility="visible" />
 
