--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:fitsSystemWindows="true"
             android:layout_marginHorizontal="@dimen/_21sdp"
             android:orientation="vertical">
 
