--- a/app/src/main/res/layout/activity_onboard.xml
+++ b/app/src/main/res/layout/activity_onboard.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_green">
@@ -14,18 +12,26 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_onboard_mpos" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_100sdp"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/ICONClick"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_onboard_mpos" />
+
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tvButton"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_43sdp"
             android:layout_marginHorizontal="@dimen/_21sdp"
-            android:layout_marginTop="@dimen/_27sdp"
+            android:layout_marginTop="@dimen/_17sdp"
             android:background="@drawable/button_bg_white"
             android:fontFamily="@font/opensans_bold"
             android:gravity="center"
