--- a/app/src/main/res/layout/activity_payment_success_flow.xml
+++ b/app/src/main/res/layout/activity_payment_success_flow.xml
@@ -54,7 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:visibility="">
+                android:visibility="gone">
 
                 <ImageView
                     android:layout_width="wrap_content"
